src/main/java/com/example/springbootboard/global/error/errorcode/ErrorCode.java
package com.example.springbootboard.global.error.errorcode;

public interface ErrorCode {
    String getErrorCode();

    int getHttpStatus();

    String getMessage();
}
